公共底部，关于我

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
+application/config/database.php
 #public/image/*
 .phpintel/*
