--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,31 @@
-#codeigniter 3
+.DS_Store
+
+application/cache/*
+!application/cache/index.html
+
 application/logs/*
 !application/logs/index.html
-!application/logs/.htaccess
-application/config/database.php
-#public/image/*
-.phpintel/*
+
+!application/*/.htaccess
+
+composer.lock
+
+user_guide_src/build/*
+user_guide_src/cilexer/build/*
+user_guide_src/cilexer/dist/*
+user_guide_src/cilexer/pycilexer.egg-info/*
+/vendor/
+public/sess_save_path/
+# IDE Files
+#-------------------------
+/nbproject/
+.idea/*
+
+## Sublime Text cache files
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+/tests/tests/
+/tests/results/
